--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,13 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   change_app_package_name: ^1.4.0
+  flutter_launcher_icons: "^0.14.4"
 
 flutter:
   uses-material-design: true
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/gym_icon.png"
+  min_sdk_android: 21
