--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   google_sign_in: ^6.0.2
   http: ^1.1.0
   shared_preferences: ^2.2.2
+  fl_chart: ^0.66.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
