--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   shared_preferences: ^2.2.2
   fl_chart: ^0.66.0
   intl: ^0.20.2
+  home_widget: ^0.8.0
 
 dev_dependencies:
   flutter_test:
