--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   fl_chart: ^0.66.0
   intl: ^0.20.2
   home_widget: ^0.8.0
+  workmanager: ^0.9.0+3
 
 dev_dependencies:
   flutter_test:
