--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   intl: ^0.20.2
   home_widget: ^0.8.0
   workmanager: ^0.9.0+3
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
